--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://saeedjudiea.github.io/Profile",
+  "homepage": "https://saeedjudiea.github.io/saeed",
   "name": "saeed-web",
   "version": "0.1.0",
   "private": true,
